--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jeoparty",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -12,7 +13,8 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start-react": "BROWSER=none react-scripts start",
+    "start-flask": "cd server/ && FLASK_ENV=development && .venv/bin/flask run",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
