--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,13 +1,21 @@
+beautifulsoup4==4.10.0
 black==21.12b0
+certifi==2021.10.8
+charset-normalizer==2.0.10
 click==8.0.3
 Flask==2.0.2
+idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
+lxml==4.7.1
 MarkupSafe==2.0.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.4.1
 python-dotenv==0.19.2
+requests==2.27.1
+soupsieve==2.3.1
 tomli==1.2.3
-typing-extensions==4.0.1
+typing_extensions==4.0.1
+urllib3==1.26.8
 Werkzeug==2.0.2
