--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-multi": "^0.1.12",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.48.0",
     "web-vitals": "^2.1.3"
   },
