--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,6 +4,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.10
 click==8.0.3
 Flask==2.0.2
+Flask-Executor==0.10.0
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
@@ -16,6 +17,6 @@ python-dotenv==0.19.2
 requests==2.27.1
 soupsieve==2.3.1
 tomli==1.2.3
-typing_extensions==4.0.1
+typing-extensions==4.0.1
 urllib3==1.26.8
 Werkzeug==2.0.2
