--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "js-cookie": "^3.0.1",
     "moment-timezone": "^0.5.34",
     "react": "^17.0.2",
+    "react-canvas-draw": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
