--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "redux": "^4.1.2",
     "redux-multi": "^0.1.12",
     "redux-thunk": "^2.4.1",
-    "sass": "^1.48.0",
-    "web-vitals": "^2.1.3"
+    "sass": "^1.49.7",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start-react": "BROWSER=none react-scripts start",
@@ -46,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "mini-css-extract-plugin": "2.4.5"
   }
 }
