--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,6 +7,7 @@ Deprecated==1.2.13
 Flask==2.0.2
 Flask-Cors==3.0.10
 Flask-Executor==0.10.0
+gunicorn==20.1.0
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
