--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ mypy-extensions==0.4.3
 packaging==21.3
 pathspec==0.9.0
 platformdirs==2.4.1
+psycopg2==2.9.3
 pyparsing==3.0.7
 python-dotenv==0.19.2
 redis==4.1.1
