--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Redis
-dump.rdb
-
 # VS Code
 /.vscode
 
@@ -189,5 +186,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# SQLite
-*.db
+# Misc
+TODO.txt
